XWIKI-9936: The tree view doesn't load on IE11 * Request JSON REST resource representations to avoid dealing with XML namespaces as IE11 doesn't support document.createNSResolver
(cherry picked from commit 74a81a2669e40de0b04496eb084fd09019d81694)

--- a/xwiki-platform-core/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-core/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -2335,6 +2335,13 @@ input#tags {
   /* Fix double scrollbar in IE7&8 */
   overflow: hidden !important;
 }
+/* Fix tree layout on IE11. Remove when SmartGWT adds support for IE11. */
+.listGrid table.treeCell > colgroup > col:last-of-type,
+.listGrid table.treeCellOver > colgroup > col:last-of-type,
+.listGrid table.treeCellSelected > colgroup > col:last-of-type,
+.listGrid table.treeCellSelectedOver > colgroup > col:last-of-type {
+  width: 100%;
+}
 
 /* -----------------------YUI Trees----------------------*/
 .ygtvitem table {
